methode add completed

--- a/src/app/employee/add-employee/add-employee.page.html
+++ b/src/app/employee/add-employee/add-employee.page.html
@@ -1,13 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>AddEmployee</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Add New Employee
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">AddEmployee</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+    <form name="editForm" #editForm="ngForm" (ngSubmit)="save()" novalidate>
+      <ion-list>
+        <ion-item>
+          <ion-label>Id ::- </ion-label>
+          <ion-input name="id" [(ngModel)]="emp.id" readonly></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Nom ::- </ion-label>
+          <ion-input name="nom" [(ngModel)]="emp.nom" required></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Age ::- </ion-label>
+          <ion-input name="age" [(ngModel)]="emp.age" required></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Salaire ::- </ion-label>
+          <ion-input name="salaire" [(ngModel)]="emp.salaire" required></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label>Department ::- </ion-label>
+            <ion-input name="deptName" [(ngModel)]="emp.deptName" required></ion-input>
+          </ion-item>  
+      </ion-list>
+      <ion-button [disabled]="editForm.form.invalid" (click)="save()" >Save</ion-button>
+    </form>
 </ion-content>
