--- a/src/app/employee/employee-details/employee-details.page.html
+++ b/src/app/employee/employee-details/employee-details.page.html
@@ -29,7 +29,7 @@
         <ion-label>{{employee.age}}</ion-label>
         <ion-label>{{employee.salaire}}</ion-label>
         <ion-label>{{employee.deptName}}</ion-label>
-        <ion-icon slot="end" color="primary" name="create" [routerLink]="['/','UpdateEmployee',employee.id]" ></ion-icon>
+        <ion-icon slot="end" color="primary" name="create" [routerLink]="['/','update-empooyee',employee.id]" ></ion-icon>
         <ion-icon slot="end" color="danger" name="trash" (click)="deleteEmployee(employee.id)"></ion-icon>
       </ion-item>
     </ion-list>
